--- a/style.css
+++ b/style.css
@@ -1,78 +1,125 @@
 body{
-    background-color: antiquewhite;
+    background-color:ghostwhite;
+    font-family: Arial,sans-serif;
+    padding: 0 16px;
 }
-.titulo{
+.menu-item1{
+    font-size:13px;
+    color: rgba(0,0,0.87);
+    text-decoration: none;
+    position:relative;
+    top:-8px;
+    margin-right: 16px;
+}
+.menu-item{
+    text-decoration: underline;
+    
+}
+h1{
+    text-align: center;
+    font-family:sans-serif;
+    word-spacing: 2px;
+    font-size: 40px;
+}
+.m{
+    width: 500px;
     height: 350px;
-    width: 1650px;
-    background-image: url(vintage.jpg);
-    position:sticky;
-    background-attachment:inherit;
-    background-size:110vw 90vh;
-    padding: 10px;
-    opacity: 0.8;
-    padding left:  30px;
-    margin: auto;
 }
-.ti{
-    font-size: 30px;
-    padding-left: 670px;
-    padding-top: 40px;
+.l{
+    display: inline;
+    border: 100px; 
+}
+.menu-item{
+    display: block;
+    display: none;
+    visibility: hidden;
+}
+.profile-pic {
+    width="48px";
+    height: ="48px";
+}
+nav{
+    text-align: right;
+}
+#dropdown-menu{
+    position: relative;
+    top:-10px;
+    margin-right: 16px;
+}
+section{
+    text-align: center;
+    padding-top: 10%;
     
 }
-h2{
-    text-align:center;
-    padding-top: 100px;
-    font-size: 60px;
-    color:rgb(69, 39, 28);
-    padding-left: 10px;
+#search-box{
+    width: 100%;
+    color: #222;
+    border: 1px solid #dfe1e5;
+    font-size:13px;
+    padding: 14px;
+    border-radius: 24px;
+    outline: none;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
-h3{
-    font-size: 25px;
-    padding-left: 40px;
-    padding-right: 20px;
 
+#search-box: hover{
+    box-shadow: 0 1px 6px 0 rgba(3, 33,36, 0.28);
+    border-color: rgba (223, 225, 229, 0);
 }
-p, .lista {
-    font-size: 22px;
-    padding-left: 40px;
-    padding-right: 20px;
-
-}
-#imagen1{
-    border-radius: 3%;
-    width:450px;
-    height: 550px;
-    float: right;
-    padding-right: 20px;
+#search-box:focus {
+    box-shadow: 0 1px 6px 0 rgba(3, 33,36, 0.28);
+    border-color: rgba (223, 225, 229, 0);
     
 }
-p.margen{
-    padding-right: 500px;
+#input-wrapper{
+    position:relative;
+    width:582px;
+    display: inline-block;
 }
-.titulo2{
-    height:50px;
-    width: 1320x;
-    background-image: url(vintage%20-%20copia1.jpg);
-    position:sticky;
-    background-attachment:inherit;
-    background-size:100vw 80vh;
-    padding: 10px;
-    opacity: 0.6;
+#input-wrapper > img {
+    position:absolute;
+    top:30px;
+    right: 0;
+    width: 28px;
 }
-
-#image{
-     border-radius: 3%; 
+.custom-btn{
+    background-color: #f2f2f2;
+    color:#5F6368;
+    font-size:14px;
+    height: 36px;
+    padding: 0 16px;
+    background-image: linear-gradient(top,#f5f5f5, #f1f1f1) ;
+    border; 1px solid transparent;
+    box-shadow:0 1px 1px rgba(0,0,0,0);
+    color: #222;
 }
-.container{
-    padding-left: 220px;
-    padding-right: 40px;
-    word-spacing: 20px;
+.custom-btn:hover{
+    background-image: linear-gradient(top, #f8f8f8, #f1f1f1) ;
+    border; 1px solid #c6c6c6;
+    box-shadow:0 1px 1px rgba(0,0,0,0.1);
+    color: #222;
 }
-#image{
-     border-radius: 3%; 
+.custom-btn: first-of-type {
+    margin-right:16px;
 }
-.container2{
-    padding-left: 80px;
-    padding-right: 40px;
-    word-spacing: 20px;
+app-dropdown{
+    width: 285px;
+    padding:28px;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+.app-item {
+    display:inline-bliock;
+    width:84px;
+    margin-bottom: 18px;
+}
+.app-item >img {
+    width:50px;
+    height: 50px;
+}
+.app-item >p {
+    color: rgba(0,0,0,0.87);
+    margin:0;
+    padding-top:8px;
 }
